@@ -779,7 +779,8 @@ void vopen_smtp_relay()
         ++ipaddr;
     }
 
-    if ( (err=vauth_open_update()) != 0 ) return;
+    // open_smtp_relay() expects "-1" on database errors. "0" means duplicate record. (See vpopmail.c)
+    if ( (err=vauth_open_update()) != 0 ) return (-1);
 
     qnprintf( SqlBufUpdate, SQL_BUF_SIZE,
 "insert into relay ( ip_addr, timestamp ) values ( '%s', %d )",
@@ -1442,6 +1443,11 @@ int vget_limits( char *domain, struct vlimits *limits )
 
 int vdel_limits( char *domain )
 {
+    int err;
+
+    // CHECKS IF A DATABASE CONNECTION IS AVAILABLE, CONNECTS IF NOT.
+    // THIS CHECK PREVENTS "CORE-DUMP" OF vqadmin.cgi.
+    if ( (err=vauth_open_update()) != 0 ) return(err);
     qnprintf( SqlBufUpdate, SQL_BUF_SIZE, "DELETE FROM limits WHERE domain = '%s'",
         domain);
     EXEC SQL PREPARE S FROM :SqlBufUpdate;
